small changes and parry sound